--- a/assets/css/sass/_colors.scss
+++ b/assets/css/sass/_colors.scss
@@ -19,3 +19,20 @@ $addToCartBlue: #ced0ff;
 $addToCartBlue2: #878ac1;
 $woobutton-font-color: #515151;
 
+
+//straight out of woo
+$woocommerce:   	#a46497;
+$green:         	#7ad03a;
+$orange:        	#ffba00;
+
+$primary:           #a46497;                                    // Primary color for buttons (alt)
+$primarytext:       desaturate(lighten($primary, 50%), 18%);    // Text on primary color bg
+
+$secondary:         desaturate(lighten($primary, 40%), 21%);    // Secondary buttons
+$secondarytext:     desaturate(darken($secondary, 60%), 21%);   // Text on secondary color bg
+
+$highlight:         adjust-hue($primary, 150deg);               // Prices, In stock labels, sales flash
+$highlightext:      desaturate(lighten($highlight, 50%), 18%);  // Text on highlight color bg
+
+$contentbg:         #fff;                                       // Content BG - Tabs (active state)
+$subtext:           #777;                                       // small, breadcrumbs etc
