complete recovery following removal of included woo styles

--- a/assets/css/sass/_colors.scss
+++ b/assets/css/sass/_colors.scss
@@ -5,6 +5,7 @@ $beige : #fbfae7;
 $black : #222;
 $white : white;
 $red : red;
+$grey : #ccc;
 $light-grey: #aeaeae;
 $cart-grey: rgba(0,0,0,0.1);
 $lighter-grey: #efefef;
